@@ -1,3 +1,8 @@
+Mon Aug 27 00:55:56 2001  George Lebl <jirka@5z.com>
+
+	* gnome-config.c, parse-path.cP: use an internal version of
+	  cancat dir and file which always works with '/'
+
 Mon Aug 27 00:32:57 2001  George Lebl <jirka@5z.com>
 
 	* gnome-gconf.c: include gnome-i18nP.h
